--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         </div>
                         <!-- Copywrite Text -->
                         <p class="copywrite"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://pyrate-enterprise/.github.io" target="_blank">Pyrate</a><a href="https://pyrate-enterprise/.github.io" target="_blank">Themewagon</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://pyrate-enterprise.github.io" target="_blank">Pyrate</a><a href="https://pyrate-enterprise/.github.io" target="_blank"></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
